Various fixes and polishing
Fixes #2071
- Fix headers height issue;
- Move inline styles to classes;
- First round fix for horz overflow due to scrollbar problem;

--- a/platform/commonUI/general/res/sass/_global.scss
+++ b/platform/commonUI/general/res/sass/_global.scss
@@ -204,6 +204,11 @@ a.disabled {
     overflow-y: auto;
 }
 
+.vscroll--persist {
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
 .slidable {
     cursor: move; // Fallback
     cursor: grab;
